crates/frust-tui/tests/snapshots/snapshots__devtools_inspector_props_loading_140x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(140, 30, &state)"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                                                             ▶ Run    ⚒ Build 
━━━━━━━━                                                                                                                                    
                                                                                                                                            
 PROJECTS                │huddle:  1 ▶ desktop                                                                                              
  ▸ huddle               │ [1] Performance  [2] System  [3] Inspector  [4] Network                                                ● service 
                         │                              ━━━━━━━━━━━━━                                                                       
 DEVICES ↻ r             │ ▾ ▦ FlexWidget                                           x0 y0 w390 h844 │ FlexWidget #1                         
   none found            │   ▾ ▣ PaddingWidget                                                      │ ━━━━━━━━━━━━━                         
                         │       T TextWidget “Hello”                                               │ bounds   x0 y0 w390 h844              
 SESSIONS                │     ▸ ▦ FlexWidget (2 children)                                          │ type                                  
   huddle                │   ▾ ≡ ListViewWidget                                                     │ frust_widgets::flex::FlexWidget       
   ▸ ▶ desktop           │       · ButtonWidget                                                     │ ───────────────────────────────────── 
                         │       · ButtonWidget                                                     │ ⟳ loading props…                      
 ACTIONS                 │                                                                          │                                       
   New project · n       │                                                                          │                                       
   Add plugin · a        │                                                                          │                                       
   Doctor · d            │                                                                          │                                       
   Build · b             │                                                                          │                                       
   Clean · c             │                                                                          │                                       
   MCP off · M           │                                                                          │                                       
   DAP off · D           │                                                                          │                                       
                         │                                                                          │                                       
                         │                                                                          │                                       
                         │                                                                          │                                       
                         │                                                                          │                                       
                         │                                                                          │                                       
                         │                                                                          │                                       
                         │                                                                          │                                       
                         │ devtools: inspector │ ↑↓/jk move · →/Enter expand · ← collapse · Tab tree↔props · r refresh · Esc back  [mouse ✓]
● 1 running  │  r run · b build · d devtools · ⌘ palette · ? help                                                                  [mouse ✓]
