crates/frust-tui/tests/snapshots/snapshots__devtools_inspector_tree_and_props_140x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(140, 30, &state)"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                                                             ▶ Run    ⚒ Build 
━━━━━━━━                                                                                                                                    
                                                                                                                                            
 PROJECTS                │huddle:  1 ▶ desktop                                                                                              
  ▸ huddle               │ [1] Performance  [2] System  [3] Inspector  [4] Network                                                ● service 
                         │                              ━━━━━━━━━━━━━                                                                       
 DEVICES ↻ r             │ ▾ ▦ FlexWidget                                                           │ PaddingWidget #2                      
   none found            │   ▾ ▣ PaddingWidget                                    x12 y44 w360 h220 │ ━━━━━━━━━━━━━━━━                      
                         │       T TextWidget “Hello”                                               │ bounds   x12 y44 w360 h220            
 SESSIONS                │     ▸ ▦ FlexWidget (2 children)                                          │ type                                  
   huddle                │   ▾ ≡ ListViewWidget                                                     │ frust_widgets::padding::PaddingWidget 
   ▸ ▶ desktop           │       · ButtonWidget                                                     │ ───────────────────────────────────── 
                         │       · ButtonWidget                                                     │ padding  EdgeInsets(12,12,12,12)      
 ACTIONS                 │                                                                          │ child    Row (#4)                     
   New project · n       │                                                                          │                                       
   Add plugin · a        │                                                                          │                                       
   Doctor · d            │                                                                          │                                       
   Build · b             │                                                                          │                                       
   Clean · c             │                                                                          │                                       
                         │                                                                          │                                       
                         │                                                                          │                                       
                         │                                                                          │                                       
                         │                                                                          │                                       
                         │                                                                          │                                       
                         │                                                                          │                                       
                         │                                                                          │                                       
                         │                                                                          │                                       
                         │                                                                          │                                       
                         │ devtools: inspector │ ↑↓/jk move · →/Enter expand · ← collapse · Tab tree↔props · r refresh · Esc back  [mouse ✓]
● 1 running  │  r run · b build · d doctor · ⌘ palette · ? help                                                                    [mouse ✓]
