crates/frust-tui/tests/snapshots/snapshots__devtools_performance_live_data_with_selection_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(100, 30, &state)"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                     ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
 PROJECTS                │huddle:  1 ▶ desktop                                                      
  ▸ huddle               │ [1] Performance  [2] System  [3] Inspector  [4] Network        ● service 
                         │ ━━━━━━━━━━━━━━━                                                          
 DEVICES ↻ r             │ Frame Timing  FPS 54.6 · p50 16.0ms · p95 16.0ms · p99 60.0ms · jank 1 (5
   none found            │          █                                                               
                         │          █                                                               
 SESSIONS                │▆▆▆▆▆▆▆▆▆▆█▆▆▆▆▁▆▆▆▆                                                      
   huddle                │ 0└────────────────────────────────────20-frame ring · frame #16 selected 
   ▸ ▶ desktop           │ Frame #16 · total 16.0ms                                                 
                         │ ████████████████████████████████████████████████████████████████████████ 
 ACTIONS                 │ rebuild 8.0ms 50%  layout 4.0ms 25%  paint 2.0ms 12%  encode 1.0ms 6%  ac
   New project · n       │                                                                          
   Add plugin · a        │                                                                          
   Doctor · d            │                                                                          
   Build · b             │                                                                          
   Clean · c             │                                                                          
   MCP off · M           │                                                                          
   DAP off · D           │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │ devtools: performance │ [1234][ ] tabs · Esc back to log        [mouse ✓]
● 1 running  │  r run · b build · d devtools · ⌘ palette · ? help                          [mouse ✓]
