crates/frust-tui/tests/snapshots/snapshots__devtools_system_tab_with_data_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(100, 30, &state)"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                     ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
 PROJECTS                │huddle:  1 ▶ desktop                                                      
  ▸ huddle               │ [1] Performance  [2] System  [3] Inspector  [4] Network        ● service 
                         │                  ━━━━━━━━━━                                              
 DEVICES ↻ r             │ desktop  ⚠ sampling unavailable — pid not exposed                        
   none found            │ CPU    38.0%   avg 25.2% over 2 samples                                  
                         │ █                                                                        
 SESSIONS                │ █                                                                        
   huddle                │▇█                                                                        
   ▸ ▶ desktop           │ RSS    91.00 MB   peak 91.00 MB                                          
                         │ uptime 2s                                                                
 ACTIONS                 │ Thermal                                                                  
   New project · n       │   cpu-0   46.5°C                                                         
   Add plugin · a        │                                                                          
   Doctor · d            │                                                                          
   Build · b             │                                                                          
   Clean · c             │                                                                          
   MCP off · M           │                                                                          
   DAP off · D           │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │ devtools: system │ [1234][ ] tabs · Esc back to log             [mouse ✓]
● 1 running  │  r run · b build · d doctor · ⌘ palette · ? help                            [mouse ✓]
