crates/frust-tui/tests/snapshots/snapshots__devtools_unavailable_release_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(100, 30, &state)"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                     ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
 PROJECTS                │huddle:  1 ▶ desktop                                                      
  ▸ huddle               │                                                                          
                         │                                                                          
 DEVICES ↻ R             │                                                                          
   none found            │                                                                          
                         │                                                                          
 SESSIONS                │                                                                          
   huddle                │                                                                          
   ▸ ▶ desktop           │                                                                          
                         │                                                                          
 ACTIONS                 │                                                                          
   New project · n       │    ⚠  This build has no devtools service                                 
   Add plugin · a        │    release builds compile the listener out entirely — rerun              
   Doctor · i            │    with `frust run` (debug) or `--profile` to inspect this               
   Build · b             │    session                                                               
   Clean                 │                                                                          
   MCP off · M           │                                                                          
   DAP off · D           │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │ devtools: unavailable │ Esc back to log                         [mouse ✓]
● 1 running  │  o run · b build · d devtools · ⌘ palette · ? help                          [mouse ✓]
