crates/frust-tui/tests/snapshots/snapshots__doctor_panel_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(100, 30, &state)"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ✗ missing                                       ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
 PROJECTS                │                                                                          
  ▸ huddle               │  Dashboard                                                               
                         │  ━━━━━━━━━━                                                              
 DEVICES ↻ r             │                                                                          
   none found            │  No session running — start a run to open a log tab here.                
                         │                                                                          
 SESSIONS        ╭ Doctor ────────────────────────────────────────────────────────╮                 
   none running  │                                                                │▓▓               
                 │  ✓ Rust toolchain                                              │▓▓               
 ACTIONS         │  ! Android SDK/NDK                                             │▓▓               
   New project · │      ANDROID_NDK_HOME not set                                  │▓▓               
   Add plugin · a│  ✗ Xcode                                                       │▓▓               
   Doctor · i    │      Xcode not found. Run: xcode-select --install              │▓▓               
   Build · b     │                                                                │▓▓               
   Clean · c     │   Re-run     Close     Toolchain setup                         │▓▓               
   MCP off · M   │  r re-run · t toolchain · Esc close                            │▓▓               
   DAP off · D   ╰────────────────────────────────────────────────────────────────╯▓▓               
                   ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓               
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
● ready  │  r run · b build · i doctor · ⌘ palette · ? help                                [mouse ✓]
