crates/frust-tui/tests/snapshots/snapshots__help_overlay_welcome_80x24.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(80, 24, &state)"
---
                                                           toolchain ◌ checking…
                                                                                
               ╭ Keyboard Shortcuts ────────────────────────────╮               
               │                                                │▓▓             
               │  r       Run on device(s)…                     │▓▓             
               │  x       Stop session                          │▓▓             
               │  b       Build…                                │▓▓             
               │  c       Clean…                                │▓▓             
               │  d       Doctor                                │▓▓             
               │  i       Toolchain setup…                      │▓▓             
               │  n       New project…                          │▓▓             
               │  a       Add plugin…                           │▓▓             
               │  ^O      Switch project…                       │▓▓             
               │  R       Refresh devices                       │▓▓             
               │  ⌥m      Toggle mouse capture                  │▓▓             
               │  f       Toggle follow-tail                    │▓▓             
               │  /       Search logs…                          │▓▓             
               │  q       Quit                                  │▓▓             
               │                                                │▓▓             
               │  Esc close                                     │▓▓             
               ╰────────────────────────────────────────────────╯▓▓             
                 ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓             
                                                                                
? help · ⌘ palette · a add plugin · q quit                             [mouse ✓]
