crates/frust-tui/tests/snapshots/snapshots__help_overlay_workbench_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(100, 30, &state)"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                     ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
 PROJECTS                │                                                                          
  ▸ huddle  ╭ Keyboard Shortcuts ─────────────────────────────────────────────────────╮             
            │                                                                         │▓▓           
 DEVICES ↻ r│  r   Run on device(s)…               M   Start/stop MCP server          │▓▓           
   none foun│  —   Run on all devices              D   DAP server…                    │▓▓           
            │  x   Stop session                    —   Start/stop DAP server          │▓▓           
 SESSIONS   │  R   Restart session                 ⌥m  Toggle mouse capture           │▓▓           
   none runn│  W   Watch: restart on save          f   Toggle follow-tail             │▓▓           
            │  X   Close tab                       w   Toggle line wrap               │▓▓           
 ACTIONS    │  b   Build…                          /   Search logs…                   │▓▓           
   New proje│  c   Clean…                          v   Select lines…                  │▓▓           
   Add plugi│  i   Doctor                          y   Copy selection                 │▓▓           
   Doctor · │  —   Toolchain setup…                l   Cycle log level filter         │▓▓           
   Build · b│  n   New project…                    z   Toggle nearest backtrace fold  │▓▓           
   Clean · c│  a   Add plugin…                     d   DevTools                       │▓▓           
   MCP off ·│  ^O  Switch project…                 r   Refresh widget tree            │▓▓           
   DAP off ·│  R   Refresh devices                 q   Quit                           │▓▓           
            │  m   MCP server…                                                        │▓▓           
            │                                                                         │▓▓           
            │  — = palette/mouse only                                                 │▓▓           
            │  Esc close                                                              │▓▓           
            ╰─────────────────────────────────────────────────────────────────────────╯▓▓           
              ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓           
                         │                                                                          
                         │                                                                          
                         │                                                                          
● ready  │  r run · b build · i doctor · ⌘ palette · ? help                                [mouse ✓]
